# pyo3-commonize

./: .gitignore  Cargo.toml  README.md  build.rs  lib.rs
.cargo/: config
.github/workflows/: rust.yml
examples/: Makefile  pyproject.toml
examples/acceptor/: Cargo.toml  lib.rs  pyproject.toml
examples/donor/: Cargo.toml  lib.rs  pyproject.toml
macro/: Cargo.toml  lib.rs
