[package]
name = "pyo3-commonize"
version = "0.1.3"
edition = "2021"
description = "Allow PyO3 classes to be passed between different PyO3 crates"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
repository = "https://github.com/yasuo-ozu/pyo3-commonize"
license = "MIT"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["pyo3", "python", "cpython", "ffi"]

[lib]
path = "lib.rs"

[build-dependencies]
cargo = "0.81.0"
filetime = "*"

[dependencies]
pyo3-commonize-macro = { path = "macro", version = "0.1.3" }

[dependencies.pyo3]
version = "=0.22.2"

[workspace]
members = [
	".",
	"macro",
	"examples/acceptor",
	"examples/donor",
]
resolver = "2"
