[package]
name = "pyo3-commonize-macro"
version = "0.1.0"
edition = "2021"
description = "Generate zerocost sumtype of iterators or closures"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
repository = "https://github.com/yasuo-ozu/sumtype"
license = "MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = "1.0"

[dependencies.syn]
version = "2.0"
features = [ "full", "derive", "printing", "extra-traits"]
