[package]
name = "pyo3-commonize-macro"
version = "0.1.1"
edition = "2021"
description = "Allow PyO3 classes to be passed between different PyO3 crates"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
license = "MIT"
repository = "https://github.com/yasuo-ozu/pyo3-commonize"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["pyo3", "python", "cpython", "ffi"]

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = "1.0"

[dependencies.syn]
version = "2.0"
features = [ "full", "derive", "printing", "extra-traits"]
